--- a/.github/workflows/common_kv_test.yml
+++ b/.github/workflows/common_kv_test.yml
@@ -1,10 +1,10 @@
-name common_kv_test
-on:push
+name: go-docker
+on: push
 jobs:
   test:
-    runs-on:centos-latest
-    if:github.ref=='refs/heads/main' || startsWith(github.ref,'refs/tags')
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2
       - name: Run Unit Tests
-        run :go test main/common/kv
+        run: go test main/common/kv
